webcompat/static/css/main.css
/* This Source Code Form is subject to the terms of the Mozilla Public
 * License, v. 2.0. If a copy of the MPL was not distributed with this
 * file, You can obtain one at http://mozilla.org/MPL/2.0/. */

/* Import var */
@import "_variable.css";

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed,
figure, figcaption, footer, header, hgroup,
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}


/*----------Global Styles----------*/
html {
   font-family: var(--base-font);
   font-weight: 300;
   color: var(--wc-variant-background-dark);
}
.wc-viewport {
  min-width: var(--base-min-width);
  min-width: 20rem;
  max-width: var(--base-max-width);
  max-width: 120rem;
  margin:0 auto;
}

/*---------- Header ----------*/
.header {
  background: var(--wb-background-light);
  padding: 0.5em 0;
}
.nav {}
.nav {
  height: 20px;
}
.nav__logo {
  height: 20px;
}
.nav--big{
  height: 55px;
  line-height: 55px;
}
.nav--big .nav__logo {
    height: 55px;
}
.nav__section{}
.nav__section--left {
  float: left;
}
.nav__section--right {
  float: right;
}
.nav__link {
  display: block;
  color: #fff;
}
.nav__link:hover {
  color: #fff;
}
.nav__link--left {
  padding-left:6em;
}
.nav__link--right {
  padding-right:7em;
}
/* 450x px */
@media all and (max-width: 28.115em) {
  .nav__link--left {
    padding-left:0;
  }
  .nav__link--right {
    padding-right:0;
  }
}
/* 450x px */
@media all and (max-width: 28.115em) {
  .nav.container {
    padding-left: 1em;
    padding-right: 1em;
  }
}
/* 330px */
@media all and (max-width: 20.615em) {
  .nav__link {
    font-size: .8em;
  }
}
.header .container {
  background-image: none !important;
}
.nav__avatar {
  width: 20px;
  height: 20px;
  display: inline-block;
  border-radius: 3px;
}
/* 330px */
@media all and (max-width: 20.615em) {
  .nav__avatar {
    display: none;
  }
}


/*----------Global H Styles----------*/
h1 {
  font-size: 3.5em;
  font-weight: 700;
}
h2 {
  font-size: 2em;
  font-weight: 600;
}
h3 {
  font-size: 1.5em;
}
h4 {
  font-size: 1.25em;
}
p {
  font-size: 1em;
}

/*----------Button----------*/
.Button {
  display: inline-block;
  background-color: transparent;
  margin-bottom: .5em;
  padding: .5em 2em;
  text-decoration: none !important;
  font-weight: 700;
  border-radius: 20px;
  color: #000;
  text-align: center;
  vertical-align: middle;
  cursor: pointer;
  background-image: none;
  white-space: nowrap;
  font-size: .8;
  line-height: normal;
  user-select: none;
  -webkit-appearance: none;
}
/**
* Remove excess padding and border in Firefox 4+
*/
.Button::-moz-focus-inner {
  border: 0;
  padding: 0;
}
.Button:hover,
.Button:focus,
.Button:active {
  text-decoration: none;
}
.Button:hover {
  color:#fff;
}
.Button--default {
  border: solid 4px var(--wb-background-dark);
}
.Button--default:hover {
  background-color: var(--wb-background-dark);
}
.Button--action {
  border: solid 4px var(--wc-variant-background-light);
}
.Button--action:hover {
  background-color: var(--wc-variant-background-light);
}
.Button:disabled,
.Button.is-disabled {
  cursor: default;
  opacity: var(--Button-disabled-opacity);
}
/*----------Link Styles----------*/
a {
  color: var(--base-link-color);
}
a:hover, a:focus {
  color: var(--base-link-color);
  outline: none;
  text-decoration: underline;
}
.bold {
  font-weight: 700;
}
.divider {
  font-weight: 700;
  border-top: 5px solid var(--wb-background-dark);
  width: 30px;
  margin-left: 5em;
  color: #fff;
}
/* Wrapper for page content to push down footer */
#wrap {
  min-height: 100%;
  height: auto !important;
  height: 100%;
/* Negative indent footer by it's height */
/*margin: 0 auto -60px;*/
/* mike: commenting out because this collapses into content
   at smaller viewports*/
}
#push {
  height: 60px;
}
/*----------Footer ----------*/

.footer {
  background-color: #ffffff;
  border-top: 5px solid var(--wb-background-dark);
  clear: both;
}
/* 450x px */
@media all and (max-width: 28.115em) {
  .footer {
    margin-top: 3em;
  }
}
.footer .container {
  padding: 1em 3em 1em;
}
.footer .follow {
  font-weight: 700;
}
.footer__section {
	list-style: none;
}
.footer__section--left {
  float: left;
}
.footer__section--right {
  float: right;
}
.footer__item {
  display: inline-block;
}
.footer__section--left .footer__item {
  padding: 0.75em 0.75em 0.75em 0;
}
.footer__section--right .footer__item {
  padding: 0.75em 0 0.75em 0.75em;
}
.footer__section--left a {
  margin-right: 1em;
}

/* 600px */
@media all and (max-width: 37.49em) {
  .footer__item {
    display: block;
  }
}
/* 770px */
@media all and (max-width: 48.115em) {
  .footer__item {
    font-size: 0.75em;
  }
}
/* 375px */
@media all and (max-width: 23.4275em) {
  .footer__section--left,
  .footer__section--right {
    float: none;
	margin:0;
  }
}
/* 375px */
@media all and (max-width: 23.4275em) {
  .footer__section--right  .footer__item {
    padding-left: 0;
  }
}

/*--------Flash Messages---------*/
.flash {
  position: absolute;
  top: 0;
  left:0;
  right: 0;
  opacity: 0.8;
  background-color: white;
  padding: 0.5em 1em;
  text-align: center;
  color: #000;
}

/*--------Homepage Styles--------*/

#hero {
  background-color: var(--wb-background-dark);
  text-align: left;
  color: #fff;
  padding: 0;
}
#hero .container {
  background: url(../img/LightBulbHero.png) no-repeat right 100px top;
  background-origin: content-box;
}
/* 770px */
@media all and (max-width: 48.115em) {
  #hero .container {
    background-size: 18%;
    background-position: right 80px top -50px;
  }
}
/* ... */

